<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">TaskManager1C</string>
    <string name="menu_ok">OK</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_filter">Filter</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>
    <string name="username_login">username</string>
    <string name="password_login">password</string>

    <string name="menu_order">Order</string>
    <string name="menu_attach">Attach</string>
    <string name="menu_new">New</string>
    <string name="menu_save">Save</string>

    <string name="status_dialog_message">для задачи:\n \"%s\"\n\nОтключить оповещение можно в настройках</string>
    <string name="status_dialog_title">Установить статус \"%s\"?</string>
    <string name="status_dialog_ok">Да</string>
    <string name="status_dialog_cancel">Отмена</string>
    <string name="error_dialog_message">Вы хотите отправить отчет об ошибке?</string>
    <string name="error_dialog_title">Ошибки на сервере</string>
    <string name="error_dialog_ok">OK</string>
    <string name="error_dialog_cancel">Пропускать</string>
    <string name="task_hint_author">автор</string>
    <string name="about_app_name">Наименование приложения</string>
    <string name="about_app_version">Версия приложения</string>
    <string name="about_app_contacts">По всем вопросам можете писать</string>
    <string name="settings_username">имя пользователя</string>
    <string name="settings_userId">ID пользователя</string>
    <string name="settings_server_address">Адрес сервера</string>
    <string name="task_deadline_hint">срок выполнения</string>
    <string name="task_days_end_hint">осталось</string>
    <string name="task_performer_hint">исполнитель</string>
    <string name="task_coperformers_hint">соисполнители</string>
    <string name="task_base_obj_hint">основание</string>
    <string name="task_base_task">базовая задача</string>
    <string name="task_inner_task">дочерние задачи</string>
    <string name="task_description_hint">описание</string>
    <string name="messages_hint">Сообщения:</string>
    <string name="message_input_hint">введите сообщение…</string>
    <string name="tasklist_search_hint">поиск…</string>
    <string name="toast_date_selected">Выбрана дата: %s</string>
    <string name="toast_date_not_selected">Дата не выбрана</string>
    <string name="date_picker_title">Выберите дату:</string>
    <string name="search_view_hint">Введите поисковый запрос</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="task_observers_hint">наблюдатели</string>
    <string name="snackbar_cancel_button">Отмена %dс</string>
    <string name="snackbar_open_button">Открыть</string>
    <string name="snackbar_allow_button">Разрешить</string>
    <string name="menu_i_do">Делаю</string>
    <string name="menu_i_delegate">Поручил</string>
    <string name="menu_i_didnt_check">Проверяю</string>
    <string name="menu_i_observe">Наблюдаю</string>
    <string name="menu_i_didnt_read">Непрочитано</string>
    <string name="menu_all_tasks">Все</string>
    <string name="menu_task_unread">Не/прочитано</string>
    <string name="menu_order_name">Наименование %s</string>
    <string name="menu_order_performer">Исполнитель %s</string>
    <string name="menu_order_start_date">Дата начала %s</string>
    <string name="menu_order_end_date">Дата окончания %s</string>
    <string name="menu_order_asc">(по воз.)</string>
    <string name="menu_order_desc">(по уб.)</string>
    <string name="exit_msg">Нажмите назад для выхода</string>
    <string name="wrong_link">Cсылка %s не найдена</string>
    <string name="link_already_opened">Ссылка уже открыта</string>
    <!--    TaskDomain statuses-->
    <string name="New">Новая</string>
    <string name="Accepted">В работе</string>
    <string name="Performed">На доработке</string>
    <string name="Reviewed">На проверке</string>
    <string name="Finished">Выполнена</string>
    <string name="Deferred">Отложена</string>
    <string name="Cancelled">Отменена</string>

    <string name="title_dialog_hint">Введите наименование задачи</string>
    <string name="description_dialog_hint">Введите описание задачи</string>
    <string name="title_valid_error">Заголовок не может быть пустым или больше %d символов</string>
    <string name="author_status_valid_error">Автор может установить только статусы: %1$s, %2$s</string>
    <string name="performer_status_valid_error">Испольнитель может установить только статус: %s</string>
    <string name="status_valid_error">Статус может менять только Автор или Исполнитель</string>
    <string name="common_valid_error">Не указан тип изменения для проверки</string>
    <string name="author_valid_error">Автор должен быть установлен</string>
    <string name="performer_valid_error">Исполнитель должен быть установлен</string>
    <string name="end_date_valid_error">Ошибка в выбранной дате. Дата не может быть меньше текущей и больше: %d</string>
    <string name="end_date_valid_max_error">Больше %d дней</string>
    <string name="end_date_valid_min_error">Меньше текущей даты</string>
    <string name="username_valid_error">Пустое имя пользователя</string>
    <string name="password_valid_error">Пустой пароль</string>
    <string name="exception_auth">Ошибка авторизации. Проверьте имя пользователя или пароль</string>
    <string name="exception_empty_object">Неожиданное пустое значение или объект: %s</string>
    <string name="exception_db">Неожиданное исключение в базе данных</string>
    <string name="exception_not_editable">Эта задача не редактируемая %s</string>
    <string name="exception_not_new">Это не новая задача</string>
    <string name="exception_is_sending">Это новая задача и находится в статусе отправки</string>
    <string name="exception_not_correct_status">У задачи не корректный статус</string>
    <string name="exception_show_snackbar">Ошибка при отображении сообщения в snackbar: %s</string>
    <string name="exception_parse_server_answer">Неожиданный ответ от сервера. Подробнее в логе</string>
    <string name="exception_connection">Ошибка подключения. Проверьте ваше соединение с сервером</string>
    <string name="exception_server_answer">Ошибка от сервера %1$s. %2$s</string>
    <string name="error_new_task_send_message">Ошибка отправки сообщения. Отсутствует ID задачи</string>
    <string name="exception_not_correct_URL">Некорректный адрес сервера</string>
    <string name="exception_encryption">Ошибка шифрования. Сообщите о проблеме разработчику</string>
    <string name="settings_alert_status_ignore">Отключить уведомления об изменении статуса</string>
    <string name="message_copied_to_clipboard">Сообщение скопировано: %s</string>
    <string name="exception_file_download">Ошибка сохранения файла. Повторите загрузку или обратитесь к разработчику</string>
    <string name="attach_bottom_sheet_camera_text">Камера</string>
    <string name="attach_bottom_sheet_gallery_text">Фото</string>
    <string name="attach_bottom_sheet_file_text">Файл</string>
    <string name="attach_error_not_uploaded">Ошибка выгрузки на сервер</string>
    <string name="bottom_sheet_error_save_file">Ошибка сохранения файла</string>
    <string name="attachments_delete_error">Ошибка удаления файла</string>
    <string name="attachments_start_loading">Загрузка файла: %s</string>
    <string name="attachments_end_loading">Файл загружен: %s</string>
    <string name="attachments_error_loading">Ошибка загрузки: %s</string>
    <string name="attachments_delete_from_server">Файл удалён с сервера: %s</string>
    <string name="attachments_name_exist">Файл с таким именем существует: %s</string>
    <string name="attachments_file_exist">Файл %s уже добавлен</string>
    <string name="attachments_too_large">Файл %s больше чем %s</string>
    <string name="permissions_not_granted">Отсутвует разрешение на: %s</string>
    <string name="permissions_open_deeplinks">Открытие ссылок</string>
</resources>