<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menu_i_do"
        android:id="@+id/iDo"
        android:icon="@drawable/ic_menu_filter_i_do"
        app:showAsAction="ifRoom|withText"
        />
    <item android:title="@string/menu_i_delegate"
        android:id="@+id/iDelegate"
        android:icon="@drawable/ic_menu_filter_i_delegate"
        app:showAsAction="ifRoom|withText"
        />
    <item android:title="@string/menu_i_didnt_check"
        android:id="@+id/iDidNtCheck"
        android:icon="@drawable/ic_menu_filter_i_checking"
        app:showAsAction="ifRoom|withText"
        />
    <item android:title="@string/menu_i_observe"
        android:id="@+id/iObserve"
        android:icon="@drawable/ic_menu_filter_i_observing"
        app:showAsAction="ifRoom|withText"
        />
    <item android:title="@string/menu_i_didnt_read"
        android:id="@+id/iDidNtRead"
        android:icon="@drawable/ic_menu_filter_not_readed"
        app:showAsAction="ifRoom|withText"
        />
    <item android:title="@string/menu_all_tasks"
        android:id="@+id/allTasks"
        android:icon="@drawable/ic_menu_filter_all"
        app:showAsAction="ifRoom|withText"
        />
</menu>