<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bottom_menu_background"
    >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_select_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableTop="@drawable/ic_photo_create"
        app:backgroundTint="@color/bottom_menu_background"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/edit_text_top_hint"
        android:text="@string/attach_bottom_sheet_camera_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_select_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/button_take_photo"
        app:layout_constraintEnd_toStartOf="@+id/button_select_file"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableTop="@drawable/ic_gallery_attach"
        app:backgroundTint="@color/bottom_menu_background"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/edit_text_top_hint"
        android:text="@string/attach_bottom_sheet_gallery_text" />

    <Button
        android:id="@+id/button_select_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/button_select_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableTop="@drawable/ic_select_file"
        app:backgroundTint="@color/bottom_menu_background"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/edit_text_top_hint"
        android:text="@string/attach_bottom_sheet_file_text" />

</androidx.constraintlayout.widget.ConstraintLayout>