<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/editable_text_background"
    android:backgroundTint="@android:color/background_dark"
    app:layout_constraintWidth_percent="100"
    app:layout_constraintHeight_percent="100"

    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/searchCard"
        style="@style/EditableCardView"
        android:layout_width="0dp"
        app:layout_constraintWidth_min="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchTIL"
            style="@style/EditableTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_view_hint"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_search_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchDialog"
                style="@style/EditTextEditable"
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listItemRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchCard"
        app:layout_constraintBottom_toTopOf="@+id/dialogOK"
        tools:listitem="@layout/list_item"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_min="100dp"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_min="300dp"
        app:layout_constraintWidth_percent="1"
        />

    <Button
        android:id="@+id/dialogOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/listItemRV"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_ok"
        />

    <Button
        android:id="@+id/dialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@+id/dialogOK"
        app:layout_constraintEnd_toStartOf="@+id/dialogOK"
        android:text="@string/dialog_cancel"
        />

</androidx.constraintlayout.widget.ConstraintLayout>