<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.settings.SettingsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/aboutAppName"
        style="@style/CardViewGlobal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="70"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aboutAppNameTIL"
            style="@style/NotEditableTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/about_app_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aboutAppNameET"
                style="@style/EditTextNotEditable"
                android:layout_width="match_parent"
                android:inputType="text"
                tools:text="TaskManager1C" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/aboutAppVersion"
        style="@style/CardViewGlobal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppName"
        app:layout_constraintHorizontal_weight="70"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aboutAppVersionTIL"
            style="@style/NotEditableTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/about_app_version">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aboutAppVersionET"
                style="@style/EditTextNotEditable"
                android:layout_width="match_parent"
                android:clickable="true"
                android:inputType="text"
                tools:text="1.0" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/aboutAppContacts"
        style="@style/CardViewGlobal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppVersion"
        app:layout_constraintHorizontal_weight="70"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aboutAppContactsTIL"
            style="@style/NotEditableTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/about_app_contacts">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aboutAppContactsET"
                style="@style/EditTextNotEditable"
                android:layout_width="match_parent"
                android:clickable="true"
                android:inputType="textEmailAddress"
                tools:text="author@webmail.com" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomMenu"
        app:menu="@menu/menu_about"
        style="@style/BottomMenu"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>